; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_scanner.c_scanner_ctx_get_scanner.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_scanner.c_scanner_ctx_get_scanner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@scanners = common dso_local global i32* null, align 8
@ScannerTypeIndex = common dso_local global i64 0, align 8
@ScannerTypeHeap = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @scanner_ctx_get_scanner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @scanner_ctx_get_scanner(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @OidIsValid(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32*, i32** @scanners, align 8
  %11 = load i64, i64* @ScannerTypeIndex, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  store i32* %12, i32** %2, align 8
  br label %17

13:                                               ; preds = %1
  %14 = load i32*, i32** @scanners, align 8
  %15 = load i64, i64* @ScannerTypeHeap, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  store i32* %16, i32** %2, align 8
  br label %17

17:                                               ; preds = %13, %9
  %18 = load i32*, i32** %2, align 8
  ret i32* %18
}

declare dso_local i64 @OidIsValid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
